--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "next": "16.1.1",
+    "phaser": "^3.90.0",
     "react": "19.2.3",
     "react-dom": "19.2.3"
   },
@@ -25,6 +26,7 @@
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-prettier": "^5.5.4",
     "prettier": "^3.7.4",
+    "sass": "^1.97.2",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
